cabal-version:      3.0
name:               lager
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          David Cox
category:           Logger
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  exposed-modules:  Lager
  build-depends:    async
                  , base
                  , stm
                  , text

test-suite test
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:    async
                  , base
                  , lager
